# thesisTranscript

./: .gitignore  README.md  combine.py  corpus.txt  corpus_clean.txt  process_kaldi.py  process_whisper.py  pyproject.toml  requirements.txt
final_segments_output/: 77_xx00xxxx_13A_segments  77_xx00xxxx_13B_segments  78_xx00xxxx_14A_segments  78_xx00xxxx_14B_segments  79_xx10xxxx_15A_segments  79_xx10xxxx_15B_segments  80_xx00xxxx_11A_full_transcription_segments  80_xx00xxxx_11B_segments  81_xx00xxxx_12A_segments  81_xx00xxxx_12B_full_transcription_segments  82_xx10xxxx_13A_segments  82_xx10xxxx_13B_segments  83_xx00xxxx_14A_segments  83_xx00xxxx_14B_full_transcription_segments
final_text_output/: 77_xx00xxxx_13A_text  77_xx00xxxx_13B_text  78_xx00xxxx_14A_text  78_xx00xxxx_14B_text  79_xx10xxxx_15A_text  79_xx10xxxx_15B_text  80_xx00xxxx_11A_full_transcription_text  80_xx00xxxx_11B_text  81_xx00xxxx_12A_text  81_xx00xxxx_12B_full_transcription_text  82_xx10xxxx_13A_text  82_xx10xxxx_13B_text  83_xx00xxxx_14A_text  83_xx00xxxx_14B_full_transcription_text
new_full_transcript/: 77_xx00xxxx_13A_full_transcript.txt  77_xx00xxxx_13A_transcript.txt  77_xx00xxxx_13B_full_transcript.txt  77_xx00xxxx_13B_transcript.txt  78_xx00xxxx_14A_full_transcript.txt  78_xx00xxxx_14A_transcript.txt  78_xx00xxxx_14B_full_transcript.txt  78_xx00xxxx_14B_transcript.txt  79_xx10xxxx_15A_full_transcript.txt  79_xx10xxxx_15A_transcript.txt  79_xx10xxxx_15B_full_transcript.txt  79_xx10xxxx_15B_transcript.txt  80_xx00xxxx_11A_full_transcription.txt  80_xx00xxxx_11A_transcript.txt  80_xx00xxxx_11B_full_transcript.txt  80_xx00xxxx_11B_transcript.txt  81_xx00xxxx_12A_full_transcript.txt  81_xx00xxxx_12A_transcript.txt  81_xx00xxxx_12B_full_transcription.txt  81_xx00xxxx_12B_transcript.txt  82_xx10xxxx_13A_full_transcript.txt  82_xx10xxxx_13B_full_transcript.txt  83_xx00xxxx_14A_full_transcript.txt  83_xx00xxxx_14B_full_transcription.txt  94_xx00xxxx_15A_transcript.txt
new_segments_output/: 77_xx00xxxx_13A_segments  77_xx00xxxx_13B_segments  78_xx00xxxx_14A_segments  78_xx00xxxx_14B_segments  79_xx10xxxx_15A_segments  79_xx10xxxx_15B_segments  80_xx00xxxx_11A_segments  80_xx00xxxx_11B_segments  81_xx00xxxx_12A_segments  81_xx00xxxx_12B_segments  82_xx10xxxx_13A_segments  82_xx10xxxx_13B_segments  83_xx00xxxx_14A_segments  83_xx00xxxx_14B_full_transcription.txt  94_xx00xxxx_15A_segments
new_text_output/: 77_xx00xxxx_13A_text  77_xx00xxxx_13B_text  78_xx00xxxx_14A_text  78_xx00xxxx_14B_text  79_xx10xxxx_15A_text  79_xx10xxxx_15B_text  80_xx00xxxx_11A_text  80_xx00xxxx_11B_text  81_xx00xxxx_12A_text  81_xx00xxxx_12B_text  82_xx10xxxx_13A_text  82_xx10xxxx_13B_text  83_xx00xxxx_14A_text  94_xx00xxxx_15A_text
segments_output/: 77_xx00xxxx_13A_segments.txt  77_xx00xxxx_13B_segments.txt  78_xx00xxxx_14A_segments.txt  78_xx00xxxx_14B_part_paragraphs_segments.txt  (+12 more)
(+47 files in other folders)
